--- a/app/assets/stylesheets/partials/modules/_storefront.scss
+++ b/app/assets/stylesheets/partials/modules/_storefront.scss
@@ -252,27 +252,24 @@
   .storefront__featured__item {
     border-top: 1px solid $color-grey-1;
 
-    /* Grid */
-    .grid {@extend %mrg-base;}
+    /* Hide 3rd tile at small viewports */
+    .grid__item + .grid__item + .grid__item {
+      display: none;
 
-      /* Hide 3rd tile at small viewports */
-      .grid__item + .grid__item + .grid__item {
-        display: none;
-
-        /* Show 3rd tile at this breakpoint */
-        @include respond-min($non-palm) {
-          display: block;
-        }
+      /* Show 3rd tile at this breakpoint */
+      @include respond-min($non-palm) {
+        display: block;
       }
+    }
 
-      /* Mods for 'Deals' tile at this breakpoint range */
-      @include respond-range($ipad-landscape, 1300) {
-        .tile--deals .tile__meta {
-          @include to-rem(padding, 55 15);
+    /* Mods for 'Deals' tile at this breakpoint range */
+    @include respond-range($ipad-landscape, 1300) {
+      .tile--deals .tile__meta {
+        @include to-rem(padding, 55 15);
 
-          .tile__meta__desc {@include font-size($font-size-sml, 1.5);}
-        }
+        .tile__meta__desc {@include font-size($font-size-sml, 1.5);}
       }
+    }
   }
 
     /* Shared rules */
